// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-5aa2f196 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      disabled={false}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--10@m k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          style={
            Object {
              "marginBottom": "1.25rem",
              "marginTop": null,
            }
          }
        >
          <h1
            className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
            data-radium={true}
            style={
              Object {
                "color": "#222",
              }
            }
          >
            Custom title mount
          </h1>
        </div>
        <div
          style={
            Object {
              "marginBottom": "1.875rem",
              "marginTop": "1.25rem",
            }
          }
        >
          <span
            className="k-HorizontalStroke k-HorizontalStroke--big"
          />
        </div>
        
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "1.875rem",
            }
          }
        >
          <p
            className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
            data-radium={true}
            style={
              Object {
                "color": "#222",
              }
            }
          >
            Custom text description
          </p>
        </div>
      </div>
      
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-5aa2f196{padding-left: 50px !important;
padding-right: 50px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}",
      }
    }
  />
</div>
`;

exports[`<ContributionCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-5aa2f196 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      disabled={false}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@m k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          style={
            Object {
              "marginBottom": "1.25rem",
              "marginTop": null,
            }
          }
        >
          <h1
            className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
            data-radium={true}
            style={
              Object {
                "color": "#222",
              }
            }
          >
            Custom title mount
          </h1>
        </div>
        <div
          style={
            Object {
              "marginBottom": "1.875rem",
              "marginTop": "1.25rem",
            }
          }
        >
          <span
            className="k-HorizontalStroke k-HorizontalStroke--big"
          />
        </div>
        <div
          style={
            Object {
              "marginBottom": "0.625rem",
              "marginTop": "1.875rem",
            }
          }
        >
          <p
            className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
            data-radium={true}
            style={
              Object {
                "margin": 0,
              }
            }
          >
            Custom title description
          </p>
        </div>
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "0.625rem",
            }
          }
        >
          <p
            className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
            data-radium={true}
            style={
              Object {
                "color": "#222",
              }
            }
          >
            Custom text description
          </p>
        </div>
        <div
          style={
            Object {
              "marginBottom": "2.5rem",
              "marginTop": "1.875rem",
            }
          }
        >
          <span
            className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
            data-radium={true}
            style={
              Object {
                "fontSize": 14,
              }
            }
          >
            Custom title contributors
            <span
              className="k-u-color-font1 k-u-weight-light"
            >
              Custom value contributors
            </span>
          </span>
          <span
            className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
            data-radium={true}
            style={
              Object {
                "fontSize": 14,
              }
            }
          >
            Custom title delivery
            <span
              className="k-u-color-font1 k-u-weight-light"
            >
              Custom value delivery
            </span>
          </span>
          <span
            className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
            data-radium={true}
            style={
              Object {
                "fontSize": 14,
              }
            }
          >
            Custom title availability
            <span
              className="k-u-color-font1 k-u-weight-light"
            >
              Custom value availability
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "2.5rem",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": null,
              }
            }
          >
            <button
              aria-label="Custom text button"
              className="rmq-2c87bfe9 k-Button k-Button--helium k-Button--big"
              data-radium={true}
              disabled={false}
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
              tabIndex={null}
              type="button"
            >
              Custom text button
            </button>
          </div>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "1.25rem",
              }
            }
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-radium={true}
              >
                <span
                  data-radium={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#61d079",
                      "borderRadius": 30,
                      "display": "flex",
                      "justifyContent": "center",
                      "marginRight": 10,
                      "minHeight": 30,
                      "minWidth": 30,
                      "padding": 0,
                    }
                  }
                >
                  <span
                    data-radium={true}
                    style={
                      Object {
                        "color": "#fff",
                        "fill": "#fff",
                        "flexBasis": 11,
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "lineHeight": 0,
                        "textAlign": "center",
                      }
                    }
                  >
                    <svg
                      className="k-IconBadge__svg"
                      viewBox="0 0 11 8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Checked
                      </title>
                      <path
                        d="M4.44 7.596L3.024 6.182 8.682.525l1.414 1.414z"
                      />
                      <path
                        d="M4.44 7.596L.903 4.06l1.414-1.414 3.536 3.536z"
                      />
                    </svg>
                  </span>
                </span>
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                />
              </div>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                  data-radium={true}
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-69fe4e73 k-Grid__col--12 k-Grid__col--4@m k-Grid__col--offset-1@m"
        data-radium={true}
        style={Object {}}
      >
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": null,
            }
          }
        >
          <img
            alt="Image alt"
            data-radium={true}
            src="#image"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-5aa2f196{padding-left: 50px !important;
padding-right: 50px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-2c87bfe9{width: 100% !important;}}
@media (max-width: 1079px){ .rmq-69fe4e73{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;
